[package]
name = "async-basics"
version = "0.1.0"
authors = ["wucong <1875486458@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimio = {git = "https://github.com/cfsamson/examples-minimio", branch = "master"}
